--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
+    "@vueuse/core": "^12.5.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
